# sheeit

./: .gitignore  Cargo.toml  LICENSE  README.md  TENETS.md
.github/workflows/: build.yml
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
sheeit/: Cargo.toml
sheeit/benches/: combined.rs  concurrency_contention.rs  evaluation.rs  structural_mutation.rs
sheeit/src/: dependency.rs  evaluation.rs  lib.rs  model.rs  shifter.rs  storage.rs
sheeit/src/dependency/: coordinate.rs  dependency_table.rs  nodes.rs
sheeit/src/evaluation/: nodes.rs
sheeit/tests/: concurrency_test.rs  recursive_dependents_test.rs  structural_mutation_consistency_test.rs
sheeit/tests/util/: mod.rs  multi_value.rs
sheeit_computation/: Cargo.toml
sheeit_computation/src/: functions.rs  lib.rs  util.rs
sheeit_computation/src/functions/: add.rs  concat.rs  divide.rs  eq.rs  eval_helper.rs  exponentiate.rs  gt.rs  gte.rs  iffunc.rs  lt.rs  lte.rs  multiply.rs  negate.rs  noteq.rs  now.rs  percent.rs  rand.rs  subtract.rs  sum.rs
sheeit_computation/src/functions/eval_helper/: datetime.rs  numeric.rs  spill_eval.rs
sheeit_computation/src/util/: iterator.rs
sheeit_parser/: Cargo.toml  README.md
sheeit_parser/src/: lib.rs  raw_parser.rs  transformer.rs
sheeit_storage/: Cargo.toml
sheeit_storage/benches/: my_benchmark.rs
sheeit_storage/src/: document.rs  lib.rs  location.rs  shifter.rs  size_check.rs
sheeit_storage/src/location/: coordinate.rs  iterator.rs  refer.rs  util.rs
sheeit_storage/src/util/: printer.rs
