[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheeit = {path = "../sheeit"}
clap = "2.33.0"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
