[package]
name = "benchmarks"
description = "Sheeit benchmarks"
homepage = "https://github.com/wilfredwee/Sheeit"
repository = "https://github.com/wilfredwee/Sheeit"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
sheeit = {path = "../sheeit"}
clap = "2.33.0"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
