[package]
name = "sheeit"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "13.0.0", features = ["rayon", "serde"] }
chashmap = "2.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
prettytable-rs = "0.8"
rayon = "1.2.0"
rand = "0.7.2"
lazy_static = "1.4.0"
rstar = "0.7.0"
matches = "0.1"
bimap = "0.4"
crossbeam = "0.7.3"
thiserror = "1.0"

sheeit_storage = {path = "../sheeit_storage"}
sheeit_computation = {path = "../sheeit_computation"}

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3"
cpuprofiler = "0.0.4"


[[bench]]
name = "combined"
harness = false