[package]
name = "sheeit_computation"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheeit_storage = {path = "../sheeit_storage"}
thiserror = "1.0"
lazy_static = "1.4.0"
matches = "0.1"
rand = "0.7"
either = "1.5"
chrono = "0.4.10"
