[package]
name = "sheeit_computation"
description = "Evaluation logic for Sheeit data"
homepage = "https://github.com/wilfredwee/Sheeit"
repository = "https://github.com/wilfredwee/Sheeit"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "../README.md"

[dependencies]
sheeit_storage = {path = "../sheeit_storage", version = "0.1.0"}
thiserror = "1.0"
lazy_static = "1.4.0"
matches = "0.1"
rand = "0.7"
either = "1.5"
chrono = "0.4.10"
