[package]
name = "sheeit_parser"
description = "Parser for Excel formulas"
homepage = "https://github.com/wilfredwee/Sheeit"
repository = "https://github.com/wilfredwee/Sheeit"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
nom = "5"
nom-trace = "0.2.1"
lazy_static = "1.4.0"
