[package]
name = "sheeit_storage"
version = "0.1.0"
authors = ["Wilfred Wee <wilfred.wee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "13.0.0", features = ["rayon", "serde"] }
chashmap = "2.2.2"
rayon = "1.2.0"
rand = "0.7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
matches = "0.1.8"
sheeit_parser = {version = "0.1.0", path = "../sheeit_parser" }
thiserror = "1.0"
prettytable-rs = "0.8"

[dev-dependencies]
criterion = "0.3"
cpuprofiler = "0.0.4"
pretty_assertions = "0.6.1"

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false